Basically a lot of stuff, forgot to commit *_*
To sum it up:
 - fonts
 - sounds
 - Widget improvements
 - Fixes
 - More stuff to break

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.panjohnny</groupId>
     <artifactId>cool-game</artifactId>
-    <version>ALPHA-1.0</version>
+    <version>DEV-0.0.1</version>
 
     <developers>
         <developer>
